# ndownloader

./: Cargo.toml  flake.nix
src/: cache.rs  main.rs  scanner.rs
src/ui/: mod.rs  text_input.rs
